# ensembl-genes-api

./: .travis.yml  README.md  conf.py  index.rst  pyproject.toml  pytest.ini
ensembl_genes_api/: exon.py  intron.py  transcript.py
ensembl_genes_api/tests/: data_exon.fa  data_exon.fa.fai  data_genomic.fa  data_genomic.fa.fai  test_exon.py  test_intron.py  test_transcript.py
